--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
     src: url("../fonts/vazir.eot") format("eot"), url("../fonts/vazir.ttf") format("truetype"), url("../fonts/vazir.woff") format("woff2"), url("../fonts/vazir.woff2") format("woff");
 }
 
-body {
+body,
+input {
     font-family: "vazir";
     direction: rtl;
     margin: 0;
@@ -37,6 +38,7 @@ li {
 
 .hamburger-icon img {
     width: 50px;
+    pointer-events: none;
 }
 
 #responsive-navigation {
@@ -86,6 +88,7 @@ header nav .logo {
 header nav .logo img {
     width: 80px;
     margin-top: 5px;
+    pointer-events: none;
 }
 
 header .header-desc {
@@ -138,6 +141,7 @@ header .header-desc p {
 
 #our-story .story-img img {
     width: 100%;
+    pointer-events: none;
 }
 
 /*Sweet*/
@@ -226,6 +230,7 @@ header .header-desc p {
 #menu .menu-img img {
     width: 95%;
     height: 250px;
+    pointer-events: none;
 }
 
 /*Hot*/
@@ -244,7 +249,7 @@ header .header-desc p {
     width: 100%;
     color: #fff;
     text-align: center;
-    margin-top: 70px;
+    margin-top: 150px;
 }
 
 .hot .hot-title h1 {
@@ -254,4 +259,134 @@ header .header-desc p {
 
 .hot .hot-title p {
     font-size: 30px;
+}
+
+/* Delight */
+
+#delight {
+    padding: 100px 0;
+    width: 100%;
+}
+
+#delight .delight {
+    width: 100%;
+    overflow: auto;
+}
+
+#delight .delight .delight-content {
+    width: 55%;
+    float: right;
+    text-align: center;
+}
+
+#delight .delight .delight-content h1 {
+    font-size: 40px;
+    margin-top: 100px;
+}
+
+#delight .delight .delight-content p {
+    margin-top: 20px;
+    font-size: 22px;
+}
+
+#delight .delight .delight-img {
+    width: 45%;
+    float: right;
+    text-align: center;
+}
+
+#delight .delight .delight-img img {
+    width: 220px;
+    height: 350px;
+
+    float: left;
+}
+
+#delight .delight .delight-img img.img-left {
+    margin-right: 30px;
+}
+
+/* Footer */
+
+#footer {
+    background-color: #141414;
+    padding-top: 100px;
+}
+
+#footer .footer {
+    width: 100%;
+}
+
+#footer .footer .about-footer {
+    width: 100%;
+    text-align: center;
+    color: #fff;
+}
+
+#footer .footer .about-footer h2 {
+    margin-bottom: 30px;
+}
+
+#footer .footer .about-footer p {
+    width: 600px;
+    margin: auto;
+    line-height: 30px;
+}
+
+#footer .footer .contact-us {
+    width: 60%;
+    height: 100px;
+    color: #fff;
+    margin: auto;
+    text-align: center;
+    margin-top: 50px;
+}
+
+#footer .footer .contact-us .news-latter {
+    float: right;
+    width: 50%;
+}
+
+#footer .footer .contact-us .news-latter input {
+    margin-top: 15px;
+    padding: 10px;
+}
+
+#footer .footer .contact-us .social {
+    float: right;
+    width: 50%;
+}
+
+#footer .footer .contact-us .social ul {
+    width: 100%;
+    margin-top: 20px;
+}
+
+#footer .footer .contact-us .social ul li {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+#footer .footer .contact-us .social ul li a {
+    color: #fff;
+}
+
+#footer .footer .contact-us .social ul li a svg {
+    font-size: 25px;
+}
+
+#footer .copy-right {
+    background-color: #333;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    height: 200px;
+    padding-top: 30px;
+    margin-top: 50px;
+}
+
+#footer .copy-right h2 {
+    margin-top: 50px;
+    margin-bottom: 20px;
+    color: #fff;
 }
