--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ input {
     direction: rtl;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    /* Hide horizontal scrollbar */
 }
 
 ul,
