--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,6 +14,10 @@
     #our-story .story-desc p {
         width: 90%;
     }
+
+    #menu .menu-desc p {
+        width: 90%;
+    }
 }
 
 @media screen and (max-width: 1200px) {
@@ -23,6 +27,14 @@
 
     #our-story .story-desc h1 {
         margin-top: 70px;
+    }
+
+    #delight .delight .delight-img h1 {
+        margin-top: 70px;
+    }
+
+    #delight .delight .delight-img img {
+        width: 45%;
     }
 }
 
@@ -63,6 +75,49 @@
     header nav .logo {
         float: left;
     }
+
+    #menu .menu-desc {
+        width: 100%;
+    }
+
+    #menu .menu-desc {
+        margin-top: 0px;
+    }
+
+    #menu .menu-img {
+        width: 100%;
+        margin-top: 30px;
+    }
+
+    #menu .menu-img ul li {
+        width: 25%;
+    }
+
+    #menu .menu-img ul li img {
+        height: 200px;
+    }
+
+    #menu {
+        height: 600px;
+    }
+
+    #delight .delight .delight-content {
+        width: 100%;
+    }
+
+    #delight .delight .delight-img {
+        width: 100%;
+    }
+
+    #delight {
+        padding: 50px 0;
+    }
+
+    #delight .delight .delight-img img {
+        width: 230px;
+        float: none;
+        margin: 0 10px;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -84,6 +139,35 @@
 
     #our-story .story-desc h1 {
         margin-top: 50px;
+    }
+
+    #sweet {
+        padding: 50px 0;
+    }
+
+    #sweet .sweet-desc {
+        margin-top: 100px;
+    }
+
+    #sweet .sweet-desc h1 {
+        font-size: 35px;
+    }
+
+    #sweet .sweet-desc p {
+        font-size: 17px;
+        width: 100%;
+    }
+
+    #menu .menu-img ul li {
+        width: 100%;
+    }
+
+    #menu {
+        height: auto;
+    }
+
+    #menu .container {
+        overflow: auto;
     }
 }
 
@@ -107,6 +191,35 @@
 
     #our-story .story-img img {
         width: 100%;
+        height: 270px;
+    }
+
+    .hot {
+        padding: 0;
+    }
+
+    .hot .hot-title {
+        margin-top: 80px;
+    }
+
+    .hot .hot-title h1 {
+        font-size: 50px;
+    }
+
+    .hot .hot-title p {
+        font-size: 25px;
+    }
+
+    #delight .delight .delight-content h1 {
+        font-size: 35px;
+    }
+
+    #delight .delight .delight-content p {
+        font-size: 18px;
+    }
+
+    #delight .delight .delight-img img.img-left {
+        margin-right: 10px;
     }
 }
 
@@ -117,5 +230,41 @@
 
     header .header-desc p {
         font-size: 15px;
+    }
+
+    #our-story .story-img img {
+        height: 200px;
+    }
+
+    #sweet {
+        padding: 0;
+    }
+
+    #sweet .sweet-desc h1 {
+        font-size: 25px;
+    }
+
+    #sweet .sweet-desc p {
+        font-size: 16px;
+    }
+
+    #sweet .sweet-desc {
+        margin-top: 70px;
+    }
+
+    #menu .menu-img ul li {
+        width: 100%;
+    }
+
+    #menu .menu-img ul li img {
+        width: 100%;
+    }
+
+    .hot .hot-title h1 {
+        font-size: 40px;
+    }
+
+    .hot .hot-title p {
+        font-size: 20px;
     }
 }
